--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 django-bootstrap-v5==1.0.11
-djangorestframework==3.14.0
+djangorestframework==3.15.2
 Django==4.3.11
 django-bootstrap-v5==1.0.11
+sqlparse>=0.5.0
